0.1.9 2019-11-xx
    - [LibXML::XPath::Context] Implement querySelector() and querySelectorAll()
      methods. Can be delegated CSS::Selector::To::XPath (or similar)
    - [LibXML::PI] nodeName() method now prepends '?'
    - [LibXML::CData] - nodeName shortened from '#cdata-section' to '#cdata'
    - [LibXML::Node]
      -- getElementsByTag name can now select '?pi-name', '?*', '@*' 
      -- added .ast() method
0.1.8 2019-11-03
    - [LibXML::Node][LibXML::XPath::Context] Added:
      -- $node.first($xpath) and $node.last($xpath) multi-methods
      -- $node.elements() and .text() methods
      -- $.children(:!blank) option
    - [LibXML::Item] $.isSameNode() method now allows comparisons between
      nodes and namespaces (always False for defined values)
    - [dom.c] add domUniqueKey(), domIsSameNode()
    - [xml6_ns.c] add xml6_ns_unique_key()
0.1.7 2019-10-29
    - [LibXML::Node::List] add AT-KEY method
    - [LibXML::XPath::Context] recover queries when a result is returned;
      die otherwise. Matches behavious of Perl 5 module.
    - [LibXML::Native::Defs] changed constants to variables: XML2, BIND-XML2, CLIB
      Just to make it easier to override them if needed:
      use LibXML::Native::Defs :$XML2; $XML2 = "/someother-path/file.so"
0.1.6 2019-10-21
    - Replace class LibXML::ErrorHandler with role LibXML::ErrorHandling. Fixes #24.
    - [LibXML::DocumentFragment]. Add subclass ParserContext. Use it to
      bundle various parameters. Tidier and hopefully fixes some memory
      leaks from closures in native callbacks
0.1.5 2019-10-18
    - Added $node.findnodes :deref option. Use it in the call from
      the .AT-KEY() method. This changes:
          '$node<species><species/humps>' to a more natural:
          '$node<species><humps>'
0.1.4 2019-10-14
    - [src/dom.c] return HTML xpath keys as lowercase; make them case-insensitive.
0.1.3 2019-10-13
    - [LibXML::Node][LibXML::Node::Set][LibXML::Node::List]