@@ -45,7 +45,7 @@ SYNOPSIS
     $node.appendText( $PCDATA );
     $node.appendTextNode( $PCDATA );
     $node.appendTextChild( $childname , $PCDATA );
-    $node.setNamespace( $nsURI , $nsPrefix, $activate );
+    $node.setNamespace( $nsURI , $nsPrefix, :$activate );
     $node.setNamespaceDeclURI( $nsPrefix, $newURI );
     $node.setNamespaceDeclPrefix( $oldPrefix, $newPrefix );
 
@@ -200,7 +200,15 @@ Many functions listed here are extensively documented in the DOM Level 3 specifi
         my LibXML::Element @nodes = $node.getChildrenByLocalName($localname);
         my LibXML::Node::Set $nodes = $node.getChildrenByLocalName($localname);
 
-    The function gives direct access to all child elements of the current node with a given local name. It makes things a lot easier if one needs to handle big data sets. A special `localname ` '*' can be used to match any local name. The special names `#text`, `#comment` and `#cdata-section` can be used to match Text, Comment or CDATA nodes.
+    The function gives direct access to all child elements of the current node with a given local name. It makes things a lot easier if one needs to handle big data sets. Note:
+
+      * A special `localname ` '*' can be used to match all ements.
+
+      * `@*` can be used to fetch attributes as a node-set
+
+      * `?*` (all), or `?name` can be used to fetch processing instructions
+
+      * The special names `#text`, `#comment` and `#cdata` can be used to match Text, Comment or CDATA nodes.
 
   * getElementsByTagName
 
