@@ -19,6 +19,8 @@ method native { callsame() // xmlTextNode }
 
 method content is rw is also<text ast> handles<substr substr-rw> { $.native.content };
 
+method to-ast { self.data }
+
 =begin pod
 =head1 NAME
 
