@@ -1,8 +1,24 @@
 use Test;
 use LibXML;
+use LibXML::Element;
 use LibXML::Document;
+use LibXML::Item :&ast-to-xml;
+
+my LibXML::Element $elem .= new('Test');
+$elem.setAttribute('foo', 'bar');
+$elem.appendText('Some text.');
+$elem.setNamespace("urn:mammals", "mam");
+is-deeply $elem.properties[0].ast, 'foo' => 'bar';
+is-deeply $elem.namespaces[0].ast, 'xmlns:mam' => 'urn:mammals';
+is-deeply $elem.children[0].ast, 'Some text.';
+is-deeply $elem.ast, 'mam:Test' => ['xmlns:mam' => 'urn:mammals', :foo<bar>, 'Some text.'];
+
+## todo: round-trip
+##$elem = ast-to-xml($elem.ast);
+##is-deeply $elem.ast, 'mam:Test' => ['xmlns:mam' => 'urn:mammals', :foo<bar>, 'Some text.'];
+
 my LibXML::Document $doc .= parse: :file<example/dromeds.xml>;
-is-deeply $doc.ast, "#document"
+is-deeply $doc.ast, "#xml"
                         => [
                             :dromedaries[
                                      :species[:name<Camel>, :humps["1 or 2"], :disposition["Cranky"]],
@@ -24,6 +40,9 @@ my $dromedaries = [
 ];
 
 is-deeply $doc<dromedaries><species>.ast, (:species['Camelid'], );
-is-deeply $doc.ast, "#document" => [ :$dromedaries ];
+is-deeply $doc.ast, "#xml" => [ :$dromedaries ];
+
+$doc<dromedaries><species>[0].ast = '#comment' => 'youza';
+is $doc<dromedaries><comment()>, '<!--youza-->';
 
 done-testing;
